--- a/assets/css/templatemo-eduwell-style.css
+++ b/assets/css/templatemo-eduwell-style.css
@@ -1211,7 +1211,7 @@ section.contact-us .contact-info h4 {
 }
 
 section.contact-us .contact-info span {
-  font-size: 15px;
+  font-size: 12px;
   color: #dc8cdb;
   font-weight: 700;
 }
@@ -1340,7 +1340,7 @@ section.page-heading .header-text {
 
 section.page-heading .header-text h4 {
   font-size: 17px;
-  text-transform: capitalize;
+  /* text-transform: capitalize;*/
   color: #7a7a7a;
 }
 
@@ -1466,7 +1466,7 @@ section.our-team .naccs .menu div h4 {
 }
 
 section.our-team .naccs .menu div span {
-  font-size: 12px;
+  font-size: 9px;
   text-transform: uppercase;
   color: #dc8cdb;
   font-weight: 700;
@@ -1474,7 +1474,7 @@ section.our-team .naccs .menu div span {
 }
 
 section.our-team .naccs .menu div.active h4 {
-  color: #dc8cdb;
+  color: #8a8a8a;
 }
 
 section.our-team ul.nacc {
